--- a/src/main/resources/templates/component/navbar.html
+++ b/src/main/resources/templates/component/navbar.html
@@ -10,8 +10,8 @@
         </a>
     </form>
     <div class="text-end space-x-6 col-start-2 md:col-start-5 col-span-1">
-        <a href="#"> <i class="text-3xl fa-regular fa-user text-white"></i></a>
-        <a href="#"> <i class=" text-3xl fa-solid fa-basket-shopping text-white"></i></a>
+        <a th:href="@{/profile}" href="#"> <i class="text-3xl fa-regular fa-user text-white"></i></a>
+        <a th:href="@{/cart}" href="#"> <i class=" text-3xl fa-solid fa-basket-shopping text-white"></i></a>
     </div>
 </div>
 <div  class="p-3.5 flex items-center w-screen h-full bg-[#E0E5F0]">
